build_output.log
[36mvite v8.0.0 [32mbuilding client environment for production...[36m[39m
[2Ktransforming...✓ 594 modules transformed.
[31m✗[39m Build failed in 418ms
[31merror during build:
[31mBuild failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Unexpected end of input
106 |    background: var(--code-bg);
107 |  }
108 |  import { Canvas } from '@react-three/fiber'
    |                  ^
109 |  import { OrbitControls } from '@react-three/drei'
110 |  
    at Module.<anonymous> (D:\codeing\space-portfolio\node_modules\lightningcss\node\index.js:56:14)
    at minifyCSS (file:///D:/codeing/space-portfolio/node_modules/vite/dist/node/chunks/node.js:21170:59)
    at async finalizeCss (file:///D:/codeing/space-portfolio/node_modules/vite/dist/node/chunks/node.js:21016:36)
    at async Promise.all (index 1)
    at async Object.run (file:///D:/codeing/space-portfolio/node_modules/vite/dist/node/chunks/node.js:2437:22)
    at async PluginContextImpl.renderChunk (file:///D:/codeing/space-portfolio/node_modules/vite/dist/node/chunks/node.js:20555:19)
    at async plugin (file:///D:/codeing/space-portfolio/node_modules/rolldown/dist/shared/bindingify-input-options-Cu7pt6SZ.mjs:1211:16)
    at async plugin.<computed> (file:///D:/codeing/space-portfolio/node_modules/rolldown/dist/shared/bindingify-input-options-Cu7pt6SZ.mjs:1570:12)[31m
    at aggregateBindingErrorsIntoJsError (file:///D:/codeing/space-portfolio/node_modules/rolldown/dist/shared/error-CP8smW_P.mjs:48:18)
    at unwrapBindingResult (file:///D:/codeing/space-portfolio/node_modules/rolldown/dist/shared/error-CP8smW_P.mjs:18:128)
    at #build (file:///D:/codeing/space-portfolio/node_modules/rolldown/dist/shared/rolldown-build-4YnQkA76.mjs:3311:34)
    at async buildEnvironment (file:///D:/codeing/space-portfolio/node_modules/vite/dist/node/chunks/node.js:32794:64)
    at async Object.build (file:///D:/codeing/space-portfolio/node_modules/vite/dist/node/chunks/node.js:33216:19)
    at async Object.buildApp (file:///D:/codeing/space-portfolio/node_modules/vite/dist/node/chunks/node.js:33213:153)
    at async CAC.<anonymous> (file:///D:/codeing/space-portfolio/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}[39m
